unpackaged/main/default/objects/Account/fields/deployment_steps__c.field-meta.xml
<CustomField>
    <fullName>deployment_steps__c</fullName>
    <defaultValue>false</defaultValue>
    <label>deployment steps</label>
    <type>Checkbox</type>
</CustomField>