unpackaged/main/default/objects/Account/fields/Template_testing__c.field-meta.xml
<CustomField>
    <fullName>Template_testing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Template testing</label>
    <type>Checkbox</type>
</CustomField>