unpackaged/main/default/objects/Account/fields/Validate_testing__c.field-meta.xml
<CustomField>
    <fullName>Validate_testing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validate testing</label>
    <type>Checkbox</type>
</CustomField>